@@ -24,11 +24,12 @@
     &#8226; Displaying and sharing Twitter picture links<br/>
     &#8226; Retweets from Talon Pull in interactions drawer, they now stack on top of each other instead of creating an instance for every new one.<br/>
     &#8226; Theme selection<br/>
+    &#8226; A bit larger auto-complete box<br/>
 <br/>
 <b>FIXES:</b><br/>
     &#8226; A little bit better Vine support. Sound is an issue though.<br/>
     &#8226; Excessive lag when closing the tweet viewer or profiles on lower end devices (caused from the background processes not being stopped)<br/>
-    &#8226; More Tweetmarker fixes (I think it should be working very well now... at least through my testing!)<br/>
+    &#8226; TONS of Tweetmarker fixes (I think it should be working very well now... at least through my testing!)<br/>
     &#8226; Talon Pull sometimes shutting down the connection with the server<br/>
     &#8226; Pebble notifications will now work for everyone<br/>
     &#8226; Fixed the compose window not always shutting<br/>
